@@ -94,7 +94,7 @@ public class ParentModuleMacro extends AbstractMacro {
             throw new MacroExecutionException("Failed to get parent path for " + templatePath);
         }
         return templatePathParent
-                .relativize(Paths.get("src", "site/xdoc", "config.xml"))
+                .relativize(Path.of("src", "site/xdoc", "config.xml"))
                 .toString()
                 .replace(".xml", ".html")
                 .replace('\\', '/')
